rename page.css 6

--- a/signup_login.html
+++ b/signup_login.html
@@ -200,7 +200,7 @@
                                       name="authenticity_token"
                                       value="V4$.airbnb.com$ugfPqnTtcxg$82jSpZccUt69r0lcWKKFI_s5sIxRRGKe9WxEcvFYUb4="
                                     />
-                                    <div class="_1vk19cb">
+                                    <div class="payment-payout__notice-desc-text">
                                       <input
                                         type="hidden"
                                         name="from"
@@ -2962,7 +2962,7 @@
                                               data-checkbox="true"
                                             ></span></span
                                           ><span
-                                            class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf atm_gz_exct8b dir dir-ltr"
+                                            class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y text-black atm_h3_yh40bf atm_gz_exct8b dir dir-ltr"
                                           >
                                             <div class="_fbbx3d">
                                               I don’t want to receive marketing
@@ -3010,7 +3010,7 @@
                                                     d="m4 16.5 8 8 16-16"
                                                   ></path></svg></span></span></span
                                           ><span
-                                            class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf atm_gz_exct8b dir dir-ltr"
+                                            class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y text-black atm_h3_yh40bf atm_gz_exct8b dir dir-ltr"
                                           >
                                             <div class="_fbbx3d">
                                               I don’t want to receive marketing
@@ -3254,7 +3254,7 @@
                                     name="authenticity_token"
                                     value="V4$.airbnb.com$gdP3em0LrCE$ovR3jip7DgQok-zydNr4HurdV6lt7gvlzQw_6ESPnWg="
                                   />
-                                  <div class="_1vk19cb">
+                                  <div class="payment-payout__notice-desc-text">
                                     <input
                                       type="hidden"
                                       name="from"
@@ -5987,7 +5987,7 @@
                                             data-checkbox="true"
                                           ></span></span
                                         ><span
-                                          class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf atm_gz_exct8b dir dir-ltr"
+                                          class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y text-black atm_h3_yh40bf atm_gz_exct8b dir dir-ltr"
                                         >
                                           <div class="_fbbx3d">
                                             I don’t want to receive marketing
@@ -6035,7 +6035,7 @@
                                                   d="m4 16.5 8 8 16-16"
                                                 ></path></svg></span></span></span
                                         ><span
-                                          class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf atm_gz_exct8b dir dir-ltr"
+                                          class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y text-black atm_h3_yh40bf atm_gz_exct8b dir dir-ltr"
                                         >
                                           <div class="_fbbx3d">
                                             I don’t want to receive marketing
